fix: application api because Timmy already do it and better than me
