# openapi/ku-seek-api.yml
@@ -133,27 +133,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Job'
-  
-  /applications:
-    get:
-      summary: Get all applied jobs in the database
-      operationId: controllers.controller.get_applied_jobs
-      parameters:
-        - name: user_id
-          in: query
-          required: true
-          schema:
-            type: integer
-      responses:
-        200:
-          description: A list of applied jobs
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Job'
-  
+   
   /bookmarks:
     get:
       summary: Get all bookmarked jobs in the database
